kubernetes/pods/affinity-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine
  labels:
    app: alpine
spec:
  containers:
  - name: alpine
    image: alpine:3.12.0
    stdin: true
    tty: true
    imagePullPolicy: IfNotPresent
  tolerations:
    - key: "devops"
      operator: "Exists"
      effect: "NoSchedule"
  affinity:
    nodeAffinity:
     requiredDuringSchedulingIgnoredDuringExecution:
       nodeSelectorTerms:
       - matchExpressions:
         - key: devops
           operator: In
           values:
           - "true"
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: "app"
            operator: In
            values:
            - "alpine"
        topologyKey: "devops"
# sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
