kubernetes/pods/create-alpine.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine
  labels:
    app: alpine
spec:
  containers:
  - name: alpine
    image: alpine:3.12.0
    stdin: true
    tty: true
    imagePullPolicy: IfNotPresent
#    volumeMounts:
#    - name: hosts-volume
#      mountPath: /etc/hosts
#  volumes:
#    - name: hosts-volume
#      hostPath:
#        path: /etc/hosts
  tolerations:
    - key: "devops"
      operator: "Exists"
      effect: "NoSchedule"
  nodeSelector:
    devops: 'true'
# sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
