kubernetes/pods/create-dnsutils.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils
spec:
  containers:
  - name: dnsutils
    #image: registry.k8s.io/e2e-test-images/jessie-dnsutils:1.3
    image: registry.lank8s.cn/e2e-test-images/jessie-dnsutils:1.3
    command:
      - sleep
      - "infinity"
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
  tolerations:
    - key: "devops"
      operator: "Exists"
      effect: "NoSchedule"
  nodeSelector:
    devops: 'true'
