kubernetes/pods/create-docker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: docker
  labels:
    app: docker
spec:
  containers:
  - name: docker
    image: docker:24.0.7-dind
    stdin: true
    tty: true
    command: [sh]
    imagePullPolicy: IfNotPresent
