kubernetes/pods/create-postgres.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  containers:
  - name: postgres
    #image: postgres:15
    image: dhub.kubesre.xyz/postgres:15
    stdin: true
    tty: true
    imagePullPolicy: IfNotPresent
    command: ["sh"]
  #   volumeMounts:
  #     - mountPath: "/mysqlbackup"
  #       name: mysqlbackup
  # volumes:
  #   - name: mysqlbackup
  #     persistentVolumeClaim:
  #       claimName: mysqlbackup
  tolerations:
    - key: "devops"
      operator: "Exists"
      effect: "NoSchedule"
    - key: "lindu-tech/server"
      operator: "Exists"
      effect: "NoSchedule"
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: "devops"
                operator: In
                values:
                  - "true"
          - matchExpressions:
              - key: "lindu-tech/server"
                operator: In
                values:
                  - "infra"
