kubernetes/pods/create-redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  labels:
    app: redis
spec:
  containers:
  - name: redis
    image: redis:6.2.14-alpine3.18
    stdin: true
    tty: true
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
  tolerations:
    - key: "devops"
      operator: "Exists"
      effect: "NoSchedule"
  nodeSelector:
    devops: 'true'
