kubernetes/pods/create-ubuntu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
  labels:
    app: ubuntu
spec:
  containers:
  - name: ubuntu
    image: docker.ketches.cn/ubuntu:24.10
    stdin: true
    tty: true
    imagePullPolicy: IfNotPresent
#    volumeMounts:
#    - name: hosts-volume
#      mountPath: /etc/hosts
#  volumes:
#    - name: hosts-volume
#      hostPath:
#        path: /etc/hosts
  tolerations:
    - key: "devops"
      operator: "Exists"
      effect: "NoSchedule"
    - key: "lindu-tech/server"
      operator: "Exists"
      effect: "NoSchedule"
#  nodeSelector:
#    devops: 'true'
  nodeSelector:
    kubernetes.io/hostname: iot-development-node-infra-24082810.0.17.248

# sed -i 's/dl-cdn.ubuntulinux.org/mirrors.aliyun.com/g' /etc/apt/sources.list
# sed -i 's/archive.ubuntu.com/mirrors.aliyun.com/g' /etc/apt/sources.list.d/ubuntu.sources
# sed -i 's/security.ubuntu.com/mirrors.aliyun.com/g' /etc/apt/sources.list.d/ubuntu.sources
