kubernetes/pods/pod-alpine.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine
  labels:
    app: alpine
spec:
  containers:
  - name: alpine
    image: alpine:3.20.2
    stdin: true
    tty: true
    imagePullPolicy: IfNotPresent
#    volumeMounts:
#    - name: hosts-volume
#      mountPath: /etc/hosts
#  volumes:
#    - name: hosts-volume
#      hostPath:
#        path: /etc/hosts
  tolerations:
    - key: "devops"
      operator: "Exists"
      effect: "NoSchedule"
    - key: "lindu-tech/server"
      operator: "Exists"
      effect: "NoSchedule"
#  nodeSelector:
#    devops: 'true'
#  nodeSelector:
#    kubernetes.io/hostname: iot-development-node-infra-24082810.0.17.247

# sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
