kubernetes/pods/pod-ssh-agent.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ssh
  labels:
    app: ssh
spec:
  imagePullSecrets:
  - name: regcred
  containers:
  - name: ssh
    image: jenkins/ssh-agent:5.45.0-alpine3.20-jdk21
    stdin: true
    tty: true
    imagePullPolicy: IfNotPresent
  tolerations:
    - key: "devops"
      operator: "Exists"
      effect: "NoSchedule"
    - key: "lindu-tech/server"
      operator: "Exists"
      effect: "NoSchedule"
