kubernetes/pods/pvc-test.yaml
kind: Pod
apiVersion: v1
metadata:
  name: alpine-1
spec:
  containers:
    - name: alpine
      image: alpine:3.12.0
      stdin: true
      tty: true
      volumeMounts:
      - mountPath: "/opt/files"
        name: external
  volumes:
    - name: external
      persistentVolumeClaim:
        claimName: eks-pvc
#  affinity:
#    nodeAffinity:
#      requiredDuringSchedulingIgnoredDuringExecution:
#        nodeSelectorTerms:
#        - matchFields:
#          - key: metadata.name
#            operator: In
#            values:
#            - ip-10-2-3-204.ec2.internal
