kubernetes/pods/iperf3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: iperf3
  labels:
    app.kubernetes.io/name: iperf3
    app.kubernetes.io/instance: iperf3
spec:
  containers:
  - name: iperf3
    image: alpine:3.18.3
    ports:
      - name: iperf3
        containerPort: 5201
        protocol: TCP
    command: ["sh", "-c", "apk add --no-cache iperf3; iperf3 -s"]
---
apiVersion: v1
kind: Service
metadata:
  labels:
    apps.emqx.io/instance: iperf3
    apps.emqx.io/managed-by: iperf3
  name: iperf3
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ports:
  - name: tcp-default
    nodePort: 31987
    port: 5201
    protocol: TCP
    targetPort: 5201
  selector:
    app.kubernetes.io/name: iperf3
    app.kubernetes.io/instance: iperf3
  type: NodePort
