kubernetes/pods/pod-golang-server-info.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-golang
  labels:
    app.kubernetes.io/name: test-golang
    app.kubernetes.io/instance: test-golang
spec:
  containers:
  - name: golang
    image: golang:1.20.3
    ports:
      - name: http
        containerPort: 80
        protocol: TCP
    command: ["sh", "/opt/service/run.sh"]
#    command: ["sh"]
#    stdin: true
#    tty: true
    volumeMounts:
      - name: "golang"
        mountPath: /opt/service/main.go
        subPath: main.go
      - name: "golang"
        mountPath: /opt/service/run.sh
        subPath: run.sh
  volumes:
  - name: "golang"
    configMap:
      name: "golang-files"
      items:
        - key: main.go
          path: main.go
        - key: run.sh
          path: run.sh
---
apiVersion: v1
kind: Service
metadata:
  name: test-golang
  labels:
    app.kubernetes.io/name: test-golang
    app.kubernetes.io/instance: test-golang
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: test-golang
    app.kubernetes.io/instance: test-golang
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-golang
  labels:
    app.kubernetes.io/name: test-golang
    app.kubernetes.io/instance: test-golang
  annotations:
#    cert-manager.io/issuer: "letsencrypt-http01"
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/enable-opentracing: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      real_ip_header x-forwarded-for;
      set_real_ip_from 0.0.0.0/0;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev-api.arpha-tech.com
      secretName: dev-api.arpha-tech.com
  rules:
    - host: dev-api.arpha-tech.com
      http:
        paths:
          - path: /server
            pathType: Prefix
            backend:
              service:
                name: test-golang
                port:
                  number: 80
    - host:
      http:
        paths:
          - path: /server
            pathType: Prefix
            backend:
              service:
                name: test-golang
                port:
                  number: 80
