kubernetes/pods/pod-nginx-php-server-info.yaml
apiVersion: v1
kind: Pod
metadata:
  name: php
  labels:
    app.kubernetes.io/name: test-php
    app.kubernetes.io/instance: test-php
spec:
  containers:
  - name: php
    ports:
      - name: fastcgi
        containerPort: 9000
        protocol: TCP
    image: php:7.4.11-fpm-alpine3.12
    volumeMounts:
      - name: "php"
        mountPath: /var/www/html
  volumes:
  - name: "php"
    configMap:
      name: "files"
---
apiVersion: v1
kind: Service
metadata:
  name: php
  labels:
    app.kubernetes.io/name: test-php
    app.kubernetes.io/instance: test-php
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9000
      protocol: TCP
      name: fastcgi
  selector:
    app.kubernetes.io/name: test-php
    app.kubernetes.io/instance: test-php
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php
  labels:
    app.kubernetes.io/name: test-php
    app.kubernetes.io/instance: test-php
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "FCGI"
    nginx.ingress.kubernetes.io/fastcgi-index: "index.php"
    nginx.ingress.kubernetes.io/fastcgi-params-configmap: "nginx"
#    nginx.ingress.kubernetes.io/whitelist-source-range: 1.3.1.1/32
#    nginx.ingress.kubernetes.io/configuration-snippet: |
#      proxy_set_header X-Forwarded-For "$http_cf_connecting_ip,$remote_addr";
#      set_real_ip_from 0.0.0.0/0;
spec:
  ingressClassName: nginx
#  tls:
#    - hosts:
#        - api-test.example.com
#      secretName: api-test.example.com
  rules:
    - host: api-test.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php
                port:
                  number: 80
    - host:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php
                port:
                  number: 80
